height: 100% is changed to auto - Fixed view error on Firefox and IE

--- a/scss/Components/Screens/_screens.scss
+++ b/scss/Components/Screens/_screens.scss
@@ -3,7 +3,7 @@ section.screens {
 
     .screens__title {
         width: 100%;
-        height: 100%;
+        height: auto;
         padding-bottom: 2rem;
 
         h2 {
